Fixed Dark Mode theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,14 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: linear-gradient(to right, #eed991, #ccf7f4);;
+  --background: linear-gradient(to right, #eed991, #ccf7f4);
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: linear-gradient(to right, #eed991, #ccf7f4);
+    --foreground: #171717;
   }
 }
 
